--- a/NumPy_Workshop.ipynb
+++ b/NumPy_Workshop.ipynb
@@ -43,7 +43,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Intro to NumPy (split this into two workshops)\n",
+        "# Intro to NumPy\n",
         "\n",
         "## Greg Teichert\n",
         "### Consulting for Statistics, Computation, and Analytics Research (CSCAR)"
